--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe!</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <table class="table-board">
@@ -33,5 +34,8 @@
       <div class="cell"></div>
       <div class="cell"></div>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="ttt.js" charset="utf-8"></script>
   </body>
 </html>
