--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe!</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
   <body>
     <table class="table-board">
@@ -35,7 +36,6 @@
       <div class="cell"></div>
     </div>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="ttt.js" charset="utf-8"></script>
   </body>
 </html>
