Fixing syntax error for Who's Turn: span class

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -35,7 +35,7 @@
         <h2>Who's Turn:</h2>
         <div id="player-turn" class="x">
           <span class="x">Player 1</span>
-          <spam class="o">Player 2</span>
+          <span class="o">Player 2</span>
         </div>
 
         <h2>Score Card</h2>
