Score now displays, styling h2 and player score display

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -32,15 +32,15 @@
       </div>
 
       <aside id="info">
-        <h2>Who's Turn:</h2>
+        <h2>Who's Turn</h2>
         <div id="player-turn" class="x">
           <span class="x">Player 1</span>
           <span class="o">Player 2</span>
         </div>
 
-        <h2>Score Card</h2>
+        <h2>Score</h2>
         <div id="score">
-          Player 1: <span id="player-one-score"> <br>
+          Player 1: <span id="player-one-score"> <br><br>
           Player 2: <span id="player-two-score"> <br>
         </div>
       </aside>
