Closing <span> elements for player score

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -40,8 +40,8 @@
 
         <h2>Score</h2>
         <div id="score">
-          Player 1: <span id="player-one-score"> <br><br>
-          Player 2: <span id="player-two-score"> <br>
+          Player 1: <span id="player-one-score"></span> <br><br>
+          Player 2: <span id="player-two-score"></span> <br>
         </div>
       </aside>
     </div>
