--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
   </head>
   <body>
+    <!-- Note to self: class = . , id = # in .css  -->
     <div class="container">
       <h1>PLAY TIC TAC TOE!</h1>
       <ul id ="board">
