--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -27,8 +27,8 @@
       <button id="reset">Restart Game</button>
 
       <div id="alerts">
-        <span class="player-one-win">Player 1 Wins!</span>
-        <span class="player-two-win">Player 2 Wins!</span>
+        <span class="p1-win">Player 1 Wins!</span>
+        <span class="p2-win">Player 2 Wins!</span>
         <span class="draw">Another Round!?</span>
       </div>
 
@@ -41,8 +41,8 @@
 
         <h2>Score</h2>
         <div id="score">
-          Player 1: <span id="player-one-score"></span> <br><br>
-          Player 2: <span id="player-two-score"></span> <br>
+          Player 1: <span id="p1-score"></span> <br><br>
+          Player 2: <span id="p2-score"></span> <br>
         </div>
       </aside>
     </div>
