--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -27,8 +27,8 @@
       <button id="reset">Restart Game</button>
 
       <div id="alerts">
-        <span class="p1-win">Player 1 Wins!</span>
-        <span class="p2-win">Player 2 Wins!</span>
+        <span class="px-win">Player 1 Wins!</span>
+        <span class="po-win">Player 2 Wins!</span>
         <span class="draw">Another Round!?</span>
       </div>
 
