--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -41,8 +41,8 @@
 
         <h2>Score</h2>
         <div id="score">
-          P1: <span id="p1-score"></span><br><br>
-          P2: <span id="p2-score"></span><br>
+          P1: <span id="p1-score"></span> <button id="reset-1">Reset</button><br><br>
+          P2: <span id="p2-score"></span> <button id="reset-2">Reset</button><br>
         </div>
       </aside>
     </div>
