Renaming restart game HTML class

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -24,7 +24,7 @@
         <li position="2,2"></li>
       </ul>
 
-      <button id="reset">Restart Game</button>
+      <button id="restart">Restart Game</button>
 
       <div id="alerts">
         <span class="px-win">Player 1 Wins!</span>
