--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -4,47 +4,63 @@
     <meta charset="utf-8">
     <title>Tic Tac Toe!</title>
     <link rel="stylesheet" href="styles.css" media="screen" title="no title" charset="utf-8">
+    <meta name="viewport" content="width=device-width" />
   </head>
-  <body>
-    <!-- Note to self: class = . , id = # in .css  -->
-    <div class="container">
-      <h1>PLAY TIC TAC TOE!</h1>
-      <ul id ="board">
-        <li position="0,0"></li>
-        <li position="0,1"></li>
-        <li position="0,2"></li>
+    <body>
+      <div class="background">
+      <h2 class="ttt-header">PLAY TIC TAC TOE!</h2>
 
-        <li position="1,0"></li>
-        <li position="1,1"></li>
-        <li position="1,2"></li>
-
-        <li position="2,0"></li>
-        <li position="2,1"></li>
-        <li position="2,2"></li>
-      </ul>
-
-      <button id="restart">Restart Game</button>
-
-      <div id="alerts">
-        <span class="px-win">Player 1 Wins!</span>
-        <span class="po-win">Player 2 Wins!</span>
-        <span class="draw">Another Round!?</span>
+      <div class="ttt-left">
+        <aside id="info">
+          <p class="sub-header">P1 SCORE</p>
+          <div id="score">
+            <span id="p1-score"></span><button id="reset-1">Reset</button>
+          </div>
+        </aside>
       </div>
 
-      <aside id="info">
-        <h2>Who's Turn</h2>
-        <div id="player-turn" class="x">
-          <span class="x">Player 1</span>
-          <span class="o">Player 2</span>
+      <div class="ttt-middle">
+        <div id="alerts">
+          <span class="px-win">Player 1 Wins!</span>
+          <span class="po-win">Player 2 Wins!</span>
+          <span class="draw">Another Round!?</span>
         </div>
 
-        <h2>Score</h2>
-        <div id="score">
-          P1: <span id="p1-score"></span> <button id="reset-1">Reset</button><br><br>
-          P2: <span id="p2-score"></span> <button id="reset-2">Reset</button><br>
-        </div>
-      </aside>
+        <ul id ="board">
+          <li position="0,0"></li>
+          <li position="0,1"></li>
+          <li position="0,2"></li>
+
+          <li position="1,0"></li>
+          <li position="1,1"></li>
+          <li position="1,2"></li>
+
+          <li position="2,0"></li>
+          <li position="2,1"></li>
+          <li position="2,2"></li>
+        </ul>
+
+        <aside id="info">
+          <p class="sub-header">WHO'S TURN</p>
+          <div id="player-turn" class="x">
+            <span class="x">Player 1 (X)</span>
+            <span class="o">Player 2 (O)</span>
+          </div>
+        </aside>
+
+        <button id="restart">Restart Game</button>
+      </div>
+
+      <div class="ttt-right">
+        <aside id="info">
+          <p class="sub-header">P2 SCORE</p>
+          <div id="score">
+            <span id="p2-score"></span> <button id="reset-2">Reset</button>
+          </div>
+        </aside>
+      </div>
     </div>
+
     <script src="ttt.js" charset="utf-8"></script>
   </body>
 </html>
